--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-   <ItemGroup>
-     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
-   </ItemGroup>
-   <ItemGroup>
-     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2"/>
-   </ItemGroup>
-   <PropertyGroup>
-     <TargetFramework>netcoreapp3.1</TargetFramework>
-   </PropertyGroup>
- </Project> 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+  </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+  </PropertyGroup>
+</Project>
