--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,3 +1,4 @@
+  
 {
   "Logging": {
     "LogLevel": {
@@ -13,7 +14,7 @@
   },
   "Token": {
     "Key": "super secret key",
-    "Issur": "http://localhost:5001"
+    "Issuer": "https://localhost:5001"
   },
   "ApiUrl": "https://localhost:5001/"
 }
